--- a/static/index.html
+++ b/static/index.html
@@ -62,17 +62,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>🦏 Le Rhino API</h1>
-        <p>Bienvenue dans l'API de gestion de cours et génération de questions via RAG.</p>
+        <h1 style="text-align: left;">Le Rhino API 🦏</h1>
+        <p style="text-align: left;">Bienvenue dans l'API de gestion de cours et génération de questions via RAG.</p>
         
-        <div class="api-links">
+        <div class="api-links" style="justify-content: flex-start;">
             <a href="/api/docs" class="btn">📚 Documentation Swagger</a>
             <a href="/api/redoc" class="btn">📖 Documentation ReDoc</a>
             <a href="/api" class="btn">🔍 Status API</a>
         </div>
 
         <div class="feature">
-            <h3>✨ Fonctionnalités</h3>
+            <h3>Fonctionnalités</h3>
             <ul>
                 <li>Gestion des matières et documents</li>
                 <li>Questions et réponses via RAG</li>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="feature">
-            <h3>🔐 Authentification par Token</h3>
+            <h3>Authentification par token</h3>
             <p>Utilisez ces tokens pour vous authentifier dans l'API :</p>
             
             <h4>👨‍🎓 Tokens Étudiants</h4>
@@ -106,18 +106,6 @@
             <div class="token-box role-admin">
                 <strong>admin1:</strong> admin_token_999
             </div>
-        </div>
-
-        <div class="feature">
-            <h3>📋 Comment utiliser l'authentification</h3>
-            <ol>
-                <li>Allez sur <a href="/api/docs" target="_blank">/api/docs</a></li>
-                <li>Utilisez l'endpoint <code>POST /api/auth/token</code></li>
-                <li>Entrez un token dans le champ "token"</li>
-                <li>Copiez le JWT retourné</li>
-                <li>Cliquez sur "Authorize" en haut à droite</li>
-                <li>Entrez le JWT dans le format: <code>Bearer YOUR_JWT_TOKEN</code></li>
-            </ol>
         </div>
     </div>
 </body>
